[package]
name = "diff-effect-rust"
version = "0.1.0"
authors = ["bugyaluwang <jiabowang@moego.pet>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
swc_core = { version = "34.0.0", features = [
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_utils",
  "ecma_ast",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
